--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>20/10</title>
+    <title>8/3 cho Hoang Phuong Linh</title>
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <div class="main">
       <div class="box top">
         <h1 id="a1">
-          Chào Hằng, Hằng có muốn mở nội dung của trang web không :3?
+          Chào Linh, cậu có muốn mở nội dung của trang web không :3?
         </h1>
-        <h1 id="a2">Đấm m nhau đi ?????</h1>
+        <h1 id="a2">Hửmmmmm ?????</h1>
       </div>
       <div class="box under">
         <div class="box-button">
@@ -25,7 +25,7 @@
           <p style="text-align: center; opacity: 0.6; font-size: 12px">
             Một sản phẩm của Bùi Cao Cường
           </p>
-          <p style="display: none">4444444444444</p>
+          <p style="display: none">4444444444444g</p>
         </div>
       </div>
     </div>
