--- a/web-2/index.html
+++ b/web-2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bên trong</title>
+    <title>content</title>
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
@@ -23,9 +23,9 @@
           height="30%" />
         <div class="box">
           <p class="ww">
-            Nhân ngày 20/10, tớ chúc cậu sẽ ngày càng khỏe đẹp, đạt được những
-            mục tiêu mà cậu đã đề ra và sớm vượt qua được những khó khăn mà cậu
-            đang gặp phải ạ !
+            Nhân ngày 8/3, tớ chúc cậu sẽ ngày càng khỏe đẹp, đạt được những mục
+            tiêu ( Đặc biệt nhất là thi đỗ đại học) mà cậu đã đề ra và sớm vượt
+            qua được những khó khăn mà cậu đang gặp phải ạ !
           </p>
           <p class="aa">
             Nói chung thì cậu là : cháy bỏng, thượng đỉnh, thượng hạng, năm sao,
